finish project, updated html and css

--- a/index.html
+++ b/index.html
@@ -22,17 +22,15 @@
         <p id="last-guess-was">Your last guess was</p>
         <p id="last-guess">?</p>
         <p id="result-text">Enter a number to play!</p>
-        <button id="reset-button" disabled>Reset</button>
       </section>
+      <button id="reset-button" disabled>Reset</button>
       <section id="user-range-input">
-        <p id="user-control-value">Want take control? Enter your own values!</p>
-        <label for="min-input">Min</label>
+        <p id="user-control-value">Want to take control? Enter your own values!</p>
         <input type="Number" class="min-input" placeholder="Min - 0">
-        <label for="max-input">Max</label>
         <input type="Number" class="max-input" placeholder="Max - 100">
-        <button class="user-range-button">Submit</button>
       </section>
       <section class="bottom-section">
+        <button class="user-range-button">Submit</button>
       </section>
     </main>
   </body>
