update with diamond placeholder

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </section>
       <section id="user-input-display">
         <p id="last-guess-was">Your last guess was</p>
-        <p id="last-guess">?</p>
+        <p id="last-guess">◊</p>
         <p id="result-text">Enter a number to play!</p>
       </section>
       <button id="reset-button" disabled>Reset</button>
